# mario-neural-network

./: .gitignore  Cargo.toml  Makefile  README.md
public/: index.html  main.js
src/: apu.rs  cpu.rs  gfx.rs  input.rs  lib.rs  mapper.rs  mem.rs  ppu.rs  rom.rs  util.rs  utils.rs
src/ai/: game_state.rs  mod.rs
src/ai/iteration/: game_state.rs  mod.rs  neural_network.rs
src/dashboard/: mod.rs
src/nes/: cpu.rs  disasm.rs  gfx.rs  input.rs  mapper.rs  mem.rs  mod.rs  ppu.rs  rom.rs  util.rs
